完成map系列API的单侧